# oya-lite

./: .gitignore  AGENTS.md  Cargo.toml  fix-tests-no-unwrap.sh  oya-build-tasks.md
.memsearch/: .capture.pid  .last_msg_time
.memsearch/memory/: 2026-04-26.md  2026-04-27.md  2026-04-28.md
.oya-lite/: 0.jnl
mutants.out/: lock.json  outcomes.json
mutants.out.old/: caught.txt  lock.json  missed.txt  mutants.json  outcomes.json  timeout.txt  unviable.txt
mutants.out.old/diff/: src__lifecycle__effects__executor.rs_line_102_col_5_001.diff  src__lifecycle__effects__executor.rs_line_122_col_9.diff  src__lifecycle__effects__executor.rs_line_122_col_9_001.diff  src__lifecycle__effects__executor.rs_line_122_col_9_003.diff  src__lifecycle__effects__executor.rs_line_122_col_9_006.diff  src__lifecycle__effects__executor.rs_line_23_col_26_001.diff  src__lifecycle__effects__executor.rs_line_23_col_9_002.diff  src__lifecycle__effects__executor.rs_line_23_col_9_003.diff  src__lifecycle__effects__executor.rs_line_64_col_9_001.diff  src__lifecycle__effects__executor.rs_line_79_col_5.diff  src__lifecycle__effects__executor.rs_line_93_col_5.diff  src__lifecycle__effects__run.rs_line_11_col_5.diff  src__lifecycle__effects__run.rs_line_11_col_5_001.diff  src__lifecycle__effects__run.rs_line_21_col_5_001.diff  (+193 more)
src/: lib.rs  main.rs
tests/: dto_roundtrip.rs  effects_coverage.rs  full_lifecycle_happy_path.rs  ids_proptest.rs  lifecycle_integration.rs  mock_executor.rs  opencode_server_integration.rs  state_machine_evolutions.rs  state_machine_proptest.rs  state_persistence.rs
(+24 files in other folders)
